--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,76 +1,75 @@
 .footer
     .footer__top
-        .footer__item
-            .footer__column
-                ul.phone-block
-                    li
-                        a(href="tel:84952668525").phone-recall 8 495 266-85-25
-                    li
-                        span.phone-article звоните ежедневно 24/7
+        .container
+            .footer__item
+                .footer__column
+                    ul.phone-block.phone-block_footer
+                        li
+                            a(href="tel:84952668525").phone-recall.phone-recall_footer 8 495 266-85-25
+                        li
+                            span.phone-article.phone-article_footer звоните ежедневно 24/7
 
-            .footer__column
-                .adresinfo г. Москва, Пресненская набережная, д. 6 строение 2
+                .footer__column
+                    .adresinfo г. Москва, Пресненская набережная, д. 6 строение 2
 
-            .footer__column
-                form.search(action="#")
-                    input(type="text" placeholder="Например сделать ключ BMW X6").inp-search
-                    button(type="submit").btngreen Найти
+                .footer__column
+                    form.search.search_footer(action="#")
+                        input(type="text" placeholder="Например сделать ключ BMW X6").inp-search.inp-search_footer
+                        button(type="submit").btngreen.search__btn Найти
 
-                button(type="button").btn-recall Вызвать мастера
+                    button(type="button").btn-recall Вызвать мастера
 
-        .footer__item
-            .footer__column
-                ul.footer__list
-                    li
-                        a(href="#") О компании
-                    li
-                        a(href="#") Наши мастера
-                    li
-                        a(href="#") Цены на ремонт
-                    li
-                        a(href="#") Контакты
+            .footer__item
+                .footer__column
+                    ul.footer__list
+                        li
+                            a(href="#") О компании
+                        li
+                            a(href="#") Наши мастера
+                        li
+                            a(href="#") Цены на ремонт
+                        li
+                            a(href="#") Контакты
 
-            .footer__column
-                ul.footer__list
-                    li
-                        a(href="#") Изготовление ключей
-                    li
-                        a(href="#") Изготовление чипов
-                    li
-                        a(href="#") Изготовление дубликата ключей
-                    li
-                        a(href="#") Изготовление чипов
+                .footer__column
+                    ul.footer__list
+                        li
+                            a(href="#") Изготовление ключей
+                        li
+                            a(href="#") Изготовление чипов
+                        li
+                            a(href="#") Изготовление дубликата ключей
+                        li
+                            a(href="#") Изготовление чипов
 
-            .footer__column
-                ul.footer__list
-                    li
-                        a(href="#") Изготовление ключей
-                    li
-                        a(href="#") Изготовление чипов
-                    li
-                        a(href="#") Изготовление дубликата ключей
-                    li
-                        a(href="#") Изготовление чипов
+                .footer__column
+                    ul.footer__list
+                        li
+                            a(href="#") Изготовление ключей
+                        li
+                            a(href="#") Изготовление чипов
+                        li
+                            a(href="#") Изготовление дубликата ключей
+                        li
+                            a(href="#") Изготовление чипов
 
-                ul.footer__list
-                    li
-                        a(href="#") Изготовление ключей
-                    li
-                        a(href="#") Изготовление чипов
-                    li
-                        a(href="#") Изготовление дубликата ключей
-                    li
-                        a(href="#") Изготовление чипов
+                    ul.footer__list
+                        li
+                            a(href="#") Изготовление ключей
+                        li
+                            a(href="#") Изготовление чипов
+                        li
+                            a(href="#") Изготовление дубликата ключей
+                        li
+                            a(href="#") Изготовление чипов
 
 
     .footer__bottom
-        .copyright 2007 - 2019 © Ключи зажигания
-        .metr 
-            img(src="img/metr.jpg")
+        .container
+            .copyright 2007 - 2019 © Ключи зажигания
+            .metr 
+                img(src="img/metr.jpg")
 
-
-
-include ./footer-modals.pug
 script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.min.js")
 script(src="libs/selectric/jquery.selectric.min.js")
